Basic Layout and Spacing, Colors, Logo Added

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
     <!-- Header -->
     <header>
+        <div class="contentWrapper">
+        <img src="assets/Spotted-Pig-Farm-Logo.png" class="logoIMG"
         <!--Navigation -->
-        <nav>
+        <h1>Store</h1>
+        <nav> 
             <ul>
                 <li><a href="#" alt="Home">Home</a></li>
                 <li><a href="#" alt="About">About</a></li>
@@ -22,19 +25,21 @@
             </ul>
         </nav>
         <!-- Page Title-->
-        <h1>Store</h1>
+       
         <!-- Social Links-->
-        <div style="socialLinks">
+        <nav id="socialLinks">
             <ul>
-                <li><a href="#" alt="Facebook"><img src="assets/facebook.png" alt="Facebook"></a></li>
-                <li><a href="#" alt="Instagram"><img src="assets/instagram.png" alt="Twitter"></a></li>
-                <li><a hfre="#" alt="Twitter"><img src="assets/twitter.png" alt="Twitter"></a></li>
+                <li><a href="#" alt="Facebook"><img src="assets/facebook.png" alt="Facebook" class="socialIcon"></a></li>
+                <li><a href="#" alt="Instagram"><img src="assets/instagram.png" alt="Twitter" class="socialIcon"></a></li>
+                <li><a hfre="#" alt="Twitter"><img src="assets/twitter.png" alt="Twitter" class="socialIcon"></a></li>
             </ul>
-        </div>
+        </div></nav>
+    </div>
     </header>
     <!-- Main Content-->
-    <!-- Categories-->
-    <form>
+    <div class="contentWrapper"
+    <!-- Shop Categories-->
+    <form class="right">
         <label for="categories">Category</label>
         <select name="categories" id="categories">
             <option value="new">New</option>
@@ -49,46 +54,129 @@
           </select>
     </form>
 
-
+    <br/>
     <!-- store panels-->
-    <div style="productRow">
-        <a href="#">
-            <div style="item">
-            <img src="assets/pig.png" class="shopItem" alt="item1">
+    <div class="productRow">
+        
+            <div class="item">
+                <a href="#" alt="Item1"><img src="assets/pig.png" class="shopItem" alt="item1">
             <h2>Item #1</h2>
-            <h2>$0.00</h2>
-            <p>Short description</p></a>
+            <h2>$0.00</h2></a>
+            <p>Lorem ipsum dolor sit amet, consectetur.</p>
+
+</p></a>
             </div>
         </a>
-        <div style="item">
+        <div class="item">
             <img src="assets/pig.png" class="shopItem" alt="item2">
             <h2>Item #1</h2>
             <h2>$0.00</h2>
-            <p>Short description</p>
+            <p>Lorem ipsum dolor sit amet, consectetur.</p>
         </div>
-        <div style="item">
+        <div class="item">
             <img src="assets/pig.png" class="shopItem" alt="item3">
             <h2>Item #1</h2>
             <h2>$0.00</h2>
-            <p>Short description</p>
+            <p>Lorem ipsum dolor sit amet, consectetur.</p>
+
+</p>
         </div>
-        <div style="item">
+        <div class="item">
             <img src="assets/pig.png" class="shopItem" alt="item4">
             <h2>Item #1</h2>
             <h2>$0.00</h2>
-            <p>Short description</p>
+            <p>Lorem ipsum dolor sit amet, consectetur.</p>
         </div>
-        <div style="item">
+        <div class="item">
+            <img src="assets/pig.png" class="shopItem" alt="item5">
+            <h2>Item #1</h2>
+            <h2>$0.00</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur.
+
+</p>
+        </div>
+    </div>
+   
+    <div class="productRow">
+        <a href="#" alt="Item1">
+            <div class="item">
+            <img src="assets/pig.png" class="shopItem" alt="item1"><br/>
+            <h2>Item #1</h2>
+            <h2>$0.00</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur.</p>
+            </div>
+        </a>
+        <div class="item">
+            <img src="assets/pig.png" class="shopItem" alt="item2">
+            <h2>Item #1</h2>
+            <h2>$0.00</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur.</p>
+        </div>
+        <div class="item">
+            <img src="assets/pig.png" class="shopItem" alt="item3">
+            <h2>Item #1</h2>
+            <h2>$0.00</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur.</p>
+        </div>
+        <div class="item">
+            <img src="assets/pig.png" class="shopItem" alt="item4">
+            <h2>Item #1</h2>
+            <h2>$0.00</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur.</p>
+        </div>
+        <div class="item">
             <img src="assets/pig.png" class="shopItem" alt="item5">
             <h2>Item #1</h2>
             <h2>$0.00</h2>
             <p>Short description</p>
         </div>
     </div>
-    <!-- Insert 2 more rows here-->
 
+    <div class="productRow">
+        <a href="#" alt="Item1">
+            <div class="item">
+            <img src="assets/pig.png" class="shopItem" alt="item1">
+            <h2>Item #1</h2>
+            <h2>$0.00</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur.
+
+</p></a>
+            </div>
+        </a>
+        <div class="item">
+            <img src="assets/pig.png" class="shopItem" alt="item2">
+            <h2>Item #1</h2>
+            <h2>$0.00</h2>
+            <p>Short description</p>
+        </div>
+        <div class="item">
+            <img src="assets/pig.png" class="shopItem" alt="item3">
+            <h2>Item #1</h2>
+            <h2>$0.00</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur.
+
+</p>
+        </div>
+        <div class="item">
+            <img src="assets/pig.png" class="shopItem" alt="item4">
+            <h2>Item #1</h2>
+            <h2>$0.00</h2>
+            <p>Short description</p>
+        </div>
+        <div class="item">
+            <img src="assets/pig.png" class="shopItem" alt="item5">
+            <h2>Item #1</h2>
+            <h2>$0.00</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur.
+
+</p>
+        </div>
+    </div>
+    <br/><br/>
+    <div class="seeMore">
     <a href="#"><h2>See more...</h2></a>
-
+    </div>
+</div>
     <!-- Footer -->
     <div class="clear"></div>
     <footer>
