Sub Pages added. Empty Cart finished. assets for images added

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <ul>
                     <li><a href="#" alt="Home">Home</a></li>
                     <li><a href="about.html" alt="About">About</a></li>
-                    <li><a href="#" alt="Contact">Contact</a></a></li>
+                    <li><a href="contact.html" alt="Contact">Contact</a></a></li>
                     <li><a href="#" alt="Store">Store</a></li>
-                    <li><a href="#" alt="Cart">Cart<img src="assets/cart.png" alt="Shopping Cart" class="cartIcon"></a></li>
+                    <li><a href="cart.html" alt="Cart">Cart<img src="assets/cart.png" alt="Shopping Cart" class="cartIcon"></a></li>
                 </ul>
             </nav>
             <img src="assets/Spotted-Pig-Farm-Logo.png" class="logoIMG">
