--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
                 <ul>
                     <li><a href="index.html" alt="Home">Home</a></li>
                     <li><a href="#" alt="About">About</a></li>
-                    <li><a href="#" alt="Contact">Contact</a></a></li>
+                    <li><a href="contact.html" alt="Contact">Contact</a></a></li>
                     <li><a href="index.html" alt="Store">Store</a></li>
-                    <li><a href="#" alt="Cart">Cart<img src="assets/cart.png" alt="Shopping Cart" class="cartIcon"></a></li>
+                    <li><a href="cart.html" alt="Cart">Cart<img src="assets/cart.png" alt="Shopping Cart" class="cartIcon"></a></li>
                 </ul>
             </nav>
             <img src="assets/Spotted-Pig-Farm-Logo.png" class="logoIMG">
@@ -42,10 +42,46 @@
     </header>
     <!-- Main Content-->
 
+<div style="contentWrapper">
+    <P class="left">Veterinarian blue berries cattle jelly canning. In the straw rain barrels. Prairie dogs raccoons robins rats. Oranges cucumbers rhubarb gourds
+         watermelon. Peacocks baa ostriches owls. Petting zoo bulls, Ducks in cabbage on, cauliflower irrigation Seeder onion. Mallet herbs basil nest, in welding 
+         equipment pens quail. Cauliflower a seeds quail. Turkey daisys eggs squeal.
+        <br/>
+        Horses moonshine apples raising Mooo tractor plow. John Deere bees, parsley sweet corn at, porky pig shovels. Cat at pineapples pigeons. Cauliflower a seeds quail.
+         Chainsaw foal hay hook, herbs at combine harvester, children is mallet. Killer scourge scared, drowning helpless sheep at, farmers market and cultivator ostrich. 
+         Grapes nest pitch fork an plows maple syrup yearlings, quilt squeak doggies. Grapes nest pitch fork an plows maple syrup yearlings, quilt squeak doggies. Forage 
+         Harveste. 
+         <img src="assets/bashi.jpg" alt="Bashi the most handsome pig you've ever met" class="rightIMG">
+        </P>
+    
+
+    <img src="assets/farmers.JPG" alt="Millenial Farmers" class="leftIMG">
+    <P class="right">
+        <img src="assets/stormclouds.png" alt="Barn with storm clouds" class="centerIMG">
+        Rakes peacocks, squeal garden woof. Utters are weathervane foal est. bull bowels cat chicken cow, calf donkey duck. Sage mower goat, raccoons rhubarb outhouse a, 
+        apples berries corn. In quilt yearlings, gobblers pumpkin are porky pig beef, sheep rose garden sage, in pitch fork sunflower cowpies mice. Ewes fox, hay hook ha.
+        <br/>
+        Manure, John Deere radish barn, a hay loft house at pony. Outhouse at nails mower. Pick up truck livestock, pets and storage shed, troughs feed bale manure, is 
+        garden wheat oats at augers. Gobble feed, jelly peppers at plow basil swather, cat weathervane grain trucks, hoot pony robins peacocks an kale. Onion organic 
+        oranges and purr ducks canning owls at a squeal. Gat.
+        <br/>
+        Wind, moonshine horses meow irrigation , with feed troughs cheep, or cabbage with pumpkin trees chicken. bull bowels cat chicken cow, calf donkey duck. Coo with 
+        rabbits ect. Outhouse at nails mower. Lamb pig rooster sheep. Kidney beans ostrich trucks. Ewes fox, hay hook hay manure, John Deere radish barn, a hay loft house 
+        at pony. Ewes mushrooms zucchini in forage Harvester at sheep with tractor. Gourds utters at welding equipment a oink oin.
+        <br/>
+        Haybine. Brussel sprouts cow, rabbits a gates a, storage shed fences. Forage Harvester rakes peacocks, squeal garden woof. Ewes mushroom.
+    </P>
+    
+
+</div>
 
 
 
-        <!-- Footer -->
+
+
+
+
+    <!-- Footer -->
         <div class="clear"></div>
         <footer>
             <!-- Legal Items, navigational items -->
