--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotted Pig Farm</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#07d5d5">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -18,7 +25,8 @@
                     <li><a href="about.html" alt="About">About</a></li>
                     <li><a href="contact.html" alt="Contact">Contact</a></a></li>
                     <li><a href="#" alt="Store">Store</a></li>
-                    <li><a href="cart.html" alt="Cart">Cart<img src="assets/cart.png" alt="Shopping Cart" class="cartIcon"></a></li>
+                    <li><a href="cart.html" alt="Cart">Cart<img src="assets/cart.png" alt="Shopping Cart"
+                                class="cartIcon"></a></li>
                 </ul>
             </nav>
             <img src="assets/Spotted-Pig-Farm-Logo.png" class="logoIMG">
@@ -26,17 +34,17 @@
             <h1>Store</h1>
             <!-- Page Title-->
         </div>
-            <!-- Social Links-->
-            <nav id="socialLinks">
-                <ul>
-                    <li><a href="#" alt="Facebook"><img src="assets/facebook.png" alt="Facebook" class="socialIcon"></a>
-                    </li>
-                    <li><a href="#" alt="Instagram"><img src="assets/instagram.png" alt="Twitter"
-                                class="socialIcon"></a></li>
-                    <li><a hfre="#" alt="Twitter"><img src="assets/twitter.png" alt="Twitter" class="socialIcon"></a>
-                    </li>
-                </ul>
-        <!-- </div>-->
+        <!-- Social Links-->
+        <nav id="socialLinks">
+            <ul>
+                <li><a href="#" alt="Facebook"><img src="assets/facebook.png" alt="Facebook" class="socialIcon"></a>
+                </li>
+                <li><a href="#" alt="Instagram"><img src="assets/instagram.png" alt="Twitter" class="socialIcon"></a>
+                </li>
+                <li><a hfre="#" alt="Twitter"><img src="assets/twitter.png" alt="Twitter" class="socialIcon"></a>
+                </li>
+            </ul>
+            <!-- </div>-->
         </nav>
         </div>
     </header>
@@ -105,9 +113,9 @@
 
                 </p>
             </div>
-            
 
-            
+
+
         </div>
 
         <div class="productRow">
@@ -212,7 +220,7 @@
             <h2>See more...</h2>
         </a>
     </div>
-    <br/> <br/>
+    <br /> <br />
     </div>
     <!-- Footer -->
     <div class="clear"></div>
