--- a/cart.html
+++ b/cart.html
@@ -22,7 +22,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html" alt="Home">Home</a></li>
-                    <li><a href="#" alt="About">About</a></li>
+                    <li><a href="about.html" alt="About">About</a></li>
                     <li><a href="contact.html" alt="Contact">Contact</a></a></li>
                     <li><a href="index.html" alt="Store">Store</a></li>
                     <li><a href="#" alt="Cart">Cart<img src="assets/cart.png" alt="Shopping Cart" class="cartIcon"></a>
