--- a/contact.html
+++ b/contact.html
@@ -50,9 +50,9 @@
     </header>
     <!-- Main Content-->
 
-    <div class="contactWrapper">
+    <!--<div class="contactWrapper">-->
 
-        <div class="signupForm">
+       <!-- <div class="signupForm">-->
             <h2 class="titleText">Contact Us</h2>
             <form>
                 <input type="text" id="FullNameName" name="FullName" placeholder="Full Name" class="formItem">
@@ -61,21 +61,28 @@
                 <br />
                 <input type="text" id="PhoneNumber" name="Phone Number" placeholder="(555)555-1234" class="formItem">
                 <br>
-                <textarea id="message" name="Message" rows="4" class="formItem">
-             Message.
-             </textarea>
+                <textarea id="message" name="Message" rows="4" class="formItem">Message.</textarea>
                 <br>
-                <button type="submit" class="submit">Submit</button>
+                <button type="submit" class="formSubmit">Submit</button>
             </form>
-        </div>
-        <div class="contactInfo">
+    <!--    </div>-->
+        <!--<div class="contactInfo">-->
+            <!--<div class="aboutCenter">-->
             <ul>
-                <li></li>
-
+                <li>Spotted Pig Farm</li>
+                <li>1234 Some Road Way</li>
+                <li>Franklin, Indiana, 46131</li>
+                <li>555-555-5555</li>
+                <li><a href="mailto: info@spottedpigfarm.com">info@spottedpigfarm.com</a></li>
             </ul>
+            
+            <!-- </div> -->
+            <img src="assets/piglet.jpg" class="contactPhoto">
+        <!-- </div> -->
+        
+    <!-- </div> -->
 
-        </div>
-    </div>
+
     <!-- Footer -->
     <div class="clear"></div>
     <footer>
