--- a/contact.html
+++ b/contact.html
@@ -50,24 +50,25 @@
     </header>
     <!-- Main Content-->
 
-    <!--<div class="contactWrapper">-->
-
-       <!-- <div class="signupForm">-->
-            <h2 class="titleText">Contact Us</h2>
-            <form>
-                <input type="text" id="FullNameName" name="FullName" placeholder="Full Name" class="formItem">
-                <br>
-                <input type="email" id="Email" name="email" placeholder="Email" class="formItem">
-                <br />
-                <input type="text" id="PhoneNumber" name="Phone Number" placeholder="(555)555-1234" class="formItem">
-                <br>
-                <textarea id="message" name="Message" rows="4" class="formItem">Message.</textarea>
-                <br>
-                <button type="submit" class="formSubmit">Submit</button>
-            </form>
-    <!--    </div>-->
-        <!--<div class="contactInfo">-->
-            <!--<div class="aboutCenter">-->
+    <div class="contactCenter">
+        <div class="contactLeft">
+            <div class="formCenter">
+                <h2 class="titleText">Contact Us</h2>
+                <form class="form">
+                    <input type="text" id="FullNameName" name="FullName" placeholder="Full Name" class="formItem">
+                    <br>
+                    <input type="email" id="Email" name="email" placeholder="Email" class="formItem">
+                    <br />
+                    <input type="text" id="PhoneNumber" name="Phone Number" placeholder="(555)555-1234"
+                        class="formItem">
+                    <br>
+                    <textarea id="message" name="Message" rows="4" class="formItem">Message.</textarea>
+                    <br>
+                    <button type="submit" class="formSubmit">Submit</button>
+                </form>
+            </div>
+        </div>
+        <div class="contactRight">
             <ul>
                 <li>Spotted Pig Farm</li>
                 <li>1234 Some Road Way</li>
@@ -75,12 +76,11 @@
                 <li>555-555-5555</li>
                 <li><a href="mailto: info@spottedpigfarm.com">info@spottedpigfarm.com</a></li>
             </ul>
-            
-            <!-- </div> -->
+
+
             <img src="assets/piglet.jpg" class="contactPhoto">
-        <!-- </div> -->
-        
-    <!-- </div> -->
+        </div>
+    </div>
 
 
     <!-- Footer -->
