--- a/cart.html
+++ b/cart.html
@@ -37,11 +37,11 @@
         <!-- Social Links-->
         <nav id="socialLinks">
             <ul>
-                <li><a href="#" alt="Facebook"><img src="assets/facebook.png" alt="Facebook" class="socialIcon"></a>
+                <li><a href="https://www.facebook.com/spottedpigfarm" alt="Facebook"><img src="assets/facebook.png" alt="Facebook" class="socialIcon"></a>
                 </li>
-                <li><a href="#" alt="Instagram"><img src="assets/instagram.png" alt="Twitter" class="socialIcon"></a>
+                <li><a href="https://www.instagram.com/spottedpigfarm/" alt="Instagram"><img src="assets/instagram.png" alt="Twitter" class="socialIcon"></a>
                 </li>
-                <li><a hfre="#" alt="Twitter"><img src="assets/twitter.png" alt="Twitter" class="socialIcon"></a>
+                <li><a hfre="https://twitter.com/spottedpigfarm" alt="Twitter"><img src="assets/twitter.png" alt="Twitter" class="socialIcon"></a>
                 </li>
             </ul>
             <!-- </div>-->
