nav color and spacing tweaks. Final version?

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                 </li>
                 <li><a href="https://www.instagram.com/spottedpigfarm/" alt="Instagram"><img src="assets/instagram.png" alt="Twitter" class="socialIcon"></a>
                 </li>
-                <li><a hfre="https://twitter.com/spottedpigfarm" alt="Twitter"><img src="assets/twitter.png" alt="Twitter" class="socialIcon"></a>
+                <li><a href="https://twitter.com/spottedpigfarm" alt="Twitter"><img src="assets/twitter.png" alt="Twitter" class="socialIcon"></a>
                 </li>
             </ul>
             <!-- </div>-->
