--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Main Content-->
     <div class="contentWrapper" <!-- Shop Categories-->
         <form class="right">
-            <label for="categories">Category</label>
+            <label for="categories" id="categoryLabel">Category</label>
             <select name="categories" id="categories">
                 <option value="new">New</option>
                 <option value="sale">Sale Items</option>
@@ -82,36 +82,34 @@
             </div>
             </a>
             <div class="item">
-                <img src="assets/cheese.png" class="shopItem" alt="item2">
+                <a href="#" alt="Item1"><img src="assets/cheese.png" class="shopItem" alt="item2">
                 <h2>Chevre</h2>
                 <h2>&nbsp</h2>
                 <h2>$6</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur.</p></a>
             </div>
             <div class="item">
-                <img src="assets/pepper.png" class="shopItem" alt="item3">
+                <a href="#" alt="Item1"><img src="assets/pepper.png" class="shopItem" alt="item3">
                 <h2>Jalapeno Jelly</h2>
                 <h2>&nbsp</h2>
                 <h2>$10</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur.</p>
 
-                </p>
+                </p></a>
             </div>
             <div class="item">
-                <img src="assets/pig.png" class="shopItem" alt="item4">
+                <a href="#" alt="Item1"><img src="assets/pig.png" class="shopItem" alt="item4">
                 <h2>Pork Chops</h2>
                 <h2>&nbsp</h2>
                 <h2>$20</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur.</p></a>
             </div>
             <div class="item">
-                <img src="assets/pig.png" class="shopItem" alt="item5">
+                <a href="#" alt="Item1"><img src="assets/pig.png" class="shopItem" alt="item5">
                 <h2>Hardwood</h2>
                 <h2>Smoked Bacon</h2>
                 <h2>$12</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur.
-
-                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur.</p></a>
             </div>
 
 
@@ -132,36 +130,36 @@
             </div>
             </a>
             <div class="item">
-                <img src="assets/cheese.png" class="shopItem" alt="item2">
+                <a href="#" alt="Item1"><img src="assets/cheese.png" class="shopItem" alt="item2">
                 <h2>Goat Gouda</h2>
                 <h2>&nbsp</h2>
                 <h2>$12</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur.</p></a>
             </div>
             <div class="item">
-                <img src="assets/pig.png" class="shopItem" alt="item3">
+                <a href="#" alt="Item1"><img src="assets/pig.png" class="shopItem" alt="item3">
                 <h2>Country Pork</h2>
                 <h2>Sausage</h2>
                 <h2>$13</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur.</p></a>
 
                 </p>
             </div>
             <div class="item">
-                <img src="assets/pig.png" class="shopItem" alt="item4">
+                <a href="#" alt="Item1"><img src="assets/pig.png" class="shopItem" alt="item4">
                 <h2>Spicy Sausage</h2>
                 <h2>Sausage</h2>
                 <h2>$14</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur.</p></a>
             </div>
             <div class="item">
-                <img src="assets/pig.png" class="shopItem" alt="item5">
+                <a href="#" alt="Item1"><img src="assets/pig.png" class="shopItem" alt="item5">
                 <h2>Bratwurst</h2>
                 <h2>&nbsp</h2>
                 <h2>$14</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur.
 
-                </p>
+                </p></a>
             </div>
         </div>
 
@@ -179,36 +177,36 @@
             </div>
             </a>
             <div class="item">
-                <img src="assets/cheese.png" class="shopItem" alt="item2">
+                <a href="#" alt="Item1"><img src="assets/cheese.png" class="shopItem" alt="item2">
                 <h2>Farm Cheese</h2>
                 <h2>&nbsp</h2>
                 <h2>$8</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur.</p></a>
             </div>
             <div class="item">
-                <img src="assets/alpaca.png" class="shopItem" alt="item3">
+                <a href="#" alt="Item1"><img src="assets/alpaca.png" class="shopItem" alt="item3">
                 <h2>Alpaca Pellets</h2>
                 <h2>&nbsp</h2>
                 <h2>$20/bag</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur.</p></a>
 
                 </p>
             </div>
             <div class="item">
-                <img src="assets/pickle.png" class="shopItem" alt="item4">
+                <a href="#" alt="Item1"><img src="assets/pickle.png" class="shopItem" alt="item4">
                 <h2>Dill Pickles</h2>
                 <h2>&nbsp</h2>
                 <h2>$8</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur.</p></a>
             </div>
             <div class="item">
-                <img src="assets/pickle.png" class="shopItem" alt="item5">
+                <a href="#" alt="Item1"><img src="assets/pickle.png" class="shopItem" alt="item5">
                 <h2>Horseradish </h2>
                 <h2>Pickle</h2>
                 <h2>$8</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur.
 
-                </p>
+                </p></a>
             </div>
         </div>
 
