--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
                         peacocks, squeal garden woof. Ewes mushroom.</p>
                 </div>
                 <div class="col-lg-6 col-sm-4">
-                    <img src="assets/farmers.jpg" alt="" class="img-fluid about-image">
+                    <img src="assets/farmers.JPG" alt="" class="img-fluid about-image">
                 </div>
             </div>
             <!-- <div class="row">
