--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <div class="col-sm-2 col-lg-2">
                     <div class="product">
                         <a href="#">
-                        <img src="assets/Alpaca.png" alt="" class="product-img img-fluid">
+                        <img src="assets/alpaca.png" alt="" class="product-img img-fluid">
                         <div class="productText">
                             Alpaca Fertilizer Pellets
                             <br />
